--- a/pokedex-react/src/index.css
+++ b/pokedex-react/src/index.css
@@ -1,413 +1,448 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-    --color-fire: #ff7402;
-    --color-grass: #9bcc50;
-    --color-steel: #9eb7b8;
-    --color-water: #4592c4;
-    --color-psychic: #f366b9;
-    --color-ground: #ab9842;
-    --color-ice: #51c4e7;
-    --color-flying: #3dc7ef;
-    --color-ghost: #4d5b64;
-    --color-normal: #a4acaf;
-    --color-poison: #7e0058;
-    --color-rock: #a38c21;
-    --color-fighting: #d56723;
-    --color-dark: #707070;
-    --color-bug: #729f3f;
-    --color-dragon: linear-gradient(180deg, #53a4cf 50%, #f16e57 50%);
-    --color-electric: #bba909;
-    --color-fairy: #fdb9e9;
-    --color-shadow: #7b62a3;
-    --color-unknow: #757575;
+	--color-fire: #ff7402;
+	--color-grass: #9bcc50;
+	--color-steel: #9eb7b8;
+	--color-water: #4592c4;
+	--color-psychic: #f366b9;
+	--color-ground: #ab9842;
+	--color-ice: #51c4e7;
+	--color-flying: #3dc7ef;
+	--color-ghost: #4d5b64;
+	--color-normal: #a4acaf;
+	--color-poison: #7e0058;
+	--color-rock: #a38c21;
+	--color-fighting: #d56723;
+	--color-dark: #707070;
+	--color-bug: #729f3f;
+	--color-dragon: linear-gradient(180deg, #53a4cf 50%, #f16e57 50%);
+	--color-electric: #bba909;
+	--color-fairy: #fdb9e9;
+	--color-shadow: #7b62a3;
+	--color-unknow: #757575;
 
-    --color-primary: #006d77;
-    --color-primary-hover: #83c5be;
+	--color-primary: #006d77;
+	--color-primary-hover: #83c5be;
 }
 
-
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
-    font-family: 'Montserrat';
+	font-family: 'Montserrat';
 }
-
-/* Global*/
+/* Globales */
 .container {
-    max-width: 1200px;
-    margin: 0 auto;
+	max-width: 1200px;
+	margin: 0 auto;
 }
 
-/*Header*/
+/* Header */
 header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 40px 0;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+
+	padding: 40px 0;
 }
 
 .logo img {
-    width: 150px;
+	width: 150px;
 }
 
 header form {
-    display: flex;
-    align-items: center;
+	display: flex;
+	align-items: center;
 
-    gap: 15px;
+	gap: 15px;
 }
 
 .form-group {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    border: 1px solid #555;
-    padding: 15px 20px;
-    border-radius: 25px;
+	display: flex;
+	align-items: center;
+	gap: 10px;
+
+	border: 1px solid #555;
+	padding: 15px 20px;
+	border-radius: 25px;
 }
 
 .form-group input {
-    font-family: inherit;
-    width: 300px;
-    border: none;
-    outline: none;
-    font-size: 15px;
+	/* padding: 15px 30px; */
+	font-family: inherit;
+	width: 300px;
+	border: none;
+	outline: none;
+	font-size: 15px;
 }
 
 .icon-search {
-    width: 30px;
-    height: 20px;
-    stroke: #555;
+	width: 20px;
+	height: 20px;
+	stroke: #555;
 }
 
 .btn-search {
-    border: none;
-    outline: none;
-    margin: auto;
-    border-radius: 25px;
-    font-family: inherit;
-    padding: 15px 30px;
-    cursor: pointer;
-    letter-spacing: 2px;
-    background-color: var(--color-primary);
-    color: #fff;
+	border: none;
+	outline: none;
+	border-radius: 25px;
+	padding: 15px 30px;
+	font-family: inherit;
+	color: #fff;
+	background-color: var(--color-primary);
+	cursor: pointer;
+	font-weight: 500;
+	letter-spacing: 2px;
 }
 
 .btn-search:hover {
-    background-color: var(--color-primary);
-    color: #000;
+	background-color: var(--color-primary-hover);
+	color: #000;
 }
 
-
-
-/*Btn filter*/
-
+/* Btn Filter */
 .container-filter {
-    display: flex;
+	display: flex;
 }
 
 .icon-filter {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-    margin-bottom: 20px;
-    cursor: pointer;
+	display: flex;
+	align-items: center;
+	gap: 15px;
+
+	margin-bottom: 20px;
+	cursor: pointer;
 }
 
 .icon-filter .icon {
-    width: 30px;
-    height: 30px;
-    stroke: #555;
-
+	width: 30px;
+	height: 30px;
+	stroke: #555;
 }
 
-/*Card list pokemon*/
-
+/* Card List Pokemon */
 .card-list-pokemon {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	gap: 20px;
 }
 
 .card-pokemon {
-    cursor: pointer;
-    text-decoration: none;
+	cursor: pointer;
+	text-decoration: none;
 }
 
 .card-img {
-    background-color: #f2f2f2;
+	background-color: #f2f2f2;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 5px;
-    height: 250px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 5px;
+	height: 250px;
 }
 
 .card-img img {
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
 }
 
 .card-info {
-    padding: 15px;
-
+	padding: 15px;
 }
 
 .card-info h3 {
-    color: #333;
+	color: #333;
 }
 
 .pokemon-id {
-    display: block;
-    color: #888;
-    margin-bottom: 15px;
+	display: block;
+	color: #888;
+	margin-bottom: 15px;
 }
 
 .card-types {
-    display: flex;
-    gap: 10px;
-    margin-top: 10px;
+	display: flex;
+	gap: 10px;
+	margin-top: 10px;
 }
 
 .card-types span {
-    font-size: 12px;
-    padding: 5px 20px;
-    border-radius: 5px;
-    color: #fff;
+	font-size: 12px;
+	padding: 5px 20px;
+	border-radius: 5px;
+	color: #fff;
 }
 
-/*TTypes of pokemon*/
-.grass {
-    background-color: var(--color-grass);
-}
-
-.fire {
-    background-color: var(--color-fire);
-}
-
+/* Types of Pokemon */
 .water {
-    background-color: var(--color-water);
+	background-color: var(--color-water);
 }
 
-.flying {
-    background-color: var(--color-flying);
-}
-
-.bug {
-    background-color: var(--color-bug);
-}
-
-.fairy {
-    background-color: var(--color-fairy);
-}
-
-.dragon {
-    background-color: var(--color-dragon);
-}
-
-.shadow {
-    background-color: var(--color-shadow);
-}
-
-.ground {
-    background-color: var(--color-ground);
-}
-
-.normal {
-    background-color: var(--color-normal);
-}
-
-.pyschic {
-    background-color: var(--color-psychic);
-}
-
-.steel {
-    background-color: var(--color-steel);
-}
-
-.dark {
-    background-color: var(--color-dark);
-}
-
-.electric {
-    background-color: var(--color-electric);
-}
-
-.fighting {
-    background-color: var(--color-fighting);
-}
-
-.ice {
-    background-color: var(--color-ice);
+.grass {
+	background-color: var(--color-grass);
 }
 
 .poison {
-    background-color: var(--color-poison);
+	background-color: var(--color-poison);
+}
+
+.fire {
+	background-color: var(--color-fire);
+}
+
+.bug {
+	background-color: var(--color-bug);
+}
+
+.dragon {
+	background: var(--color-dragon);
+}
+
+.flying {
+	background-color: var(--color-flying);
+}
+
+.ground {
+	background-color: var(--color-ground);
+}
+
+.steel {
+	background-color: var(--color-steel);
+}
+
+.psychic {
+	background-color: var(--color-psychic);
+}
+
+.ice {
+	background-color: var(--color-ice);
+}
+
+.ghost {
+	background-color: var(--color-ghost);
+}
+
+.normal {
+	background-color: var(--color-normal);
 }
 
 .rock {
-    background-color: var(--color-rock);
+	background-color: var(--color-rock);
 }
 
-/*Container filters*/
+.electric {
+	background-color: var(--color-electric);
+}
 
-/* .title{
-    text-decoration: underline;
-    font-size: 30px;
-} */
+.fighting {
+	background-color: var(--color-fighting);
+}
+
+.fairy {
+	background-color: var(--color-fairy);
+}
+
+.dark {
+	background-color: var(--color-dark);
+}
 
 /* Container Filters */
-.container-filters{
-    display: flex;
-    justify-content: center;
+.container-filters {
+	display: flex;
+	justify-content: center;
 
-    position: fixed;
-    top: 0;
-    left: -300px;
-    width: 250px;
+	position: fixed;
+	top: 0;
+	left: -300px;
+	width: 250px;
 
-    color: #555;
-    background-color: #f2f2f2;
-    height: 100%;
-    padding-top: 140px;
-    transition: all .3s linear;
-
+	color: #555;
+	background-color: #f2f2f2;
+	height: 100%;
+	padding-top: 140px;
+	transition: all 0.3s linear;
 }
 
-.container-filters.active{
-    left: 0;
+.container-filters.active {
+	left: 0;
 }
 
-.filter-by-type{
-    display: flex;
-    flex-direction: column;
+.filter-by-type {
+	display: flex;
+	flex-direction: column;
 
-    gap: 20px;
+	gap: 20px;
 }
 
-.filter-by-type span{
-    font-weight: 700;
-    font-size: 22px;
+.filter-by-type span {
+	font-weight: 700;
+	font-size: 22px;
 }
 
-.group-type{
-    display: flex;
-    gap: 10px;
+.group-type {
+	display: flex;
+	gap: 10px;
 
-    margin-left: 15px ;
+	margin-left: 15px;
 }
 
-.group-type label{
-    cursor: pointer;
+.group-type label {
+	cursor: pointer;
 }
 
-/* =================================
-Styles of Pokemon sigle page
-================================ */
+/* 
+======================================= 
+Styles of Pokemon Single Page
+======================================= 
+*/
 
-.main-pokemon{
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 50px;
+.main-pokemon {
+	display: flex;
+	flex-direction: column;
+
+	margin-top: 100px;
+	margin-bottom: 50px;
 }
 
-.header-main-pokemon{
-    margin-top: 20px;
-    display: flex;
-    align-items: center;
-    position: relative;
+.header-main-pokemon {
+	margin-top: 20px;
 
+	display: flex;
+	align-items: center;
+
+	position: relative;
 }
 
-.number-pokemon{
-    position: absolute;
-    top: -70px;
-    left: 0;
+.number-pokemon {
+	position: absolute;
+	top: -130px;
+	left: 0;
 
-    font-size: 150px;
-    font-weight: 700;
-    color: var(--color-primary-hover);
+	font-size: 200px;
+	font-weight: 700;
+	color: var(--color-primary-hover);
 }
 
-.container-img-pokemon{
-    order: 2;
-    flex: 1;
-    padding: 25px 25px 25px 0;
+.container-img-pokemon {
+	order: 2;
+	flex: 1;
+	padding: 25px 25px 25px 0;
+	height: 400px;
 }
 
-.container-img-pokemon img{
-    width: 50%;
+.container-img-pokemon img {
+	height: 100%;
+	width: 100%;
 }
 
-.container-info-pokemon{
-    display: flex;
-    flex-direction: column;
-    order: 1;
-    flex: 1;
+.container-info-pokemon {
+	display: flex;
+	flex-direction: column;
+
+	order: 1;
+	flex: 1;
 }
 
-.container-info-pokemon h1{
-    text-align: center;
-    font-size: 50px;
+.container-info-pokemon h1 {
+	text-align: right;
+	font-size: 60px;
 }
 
-.info-pokemon{
-    display: flex;
-    justify-content: initial;
-    
+.info-pokemon {
+	display: flex;
+	justify-content: space-between;
 
-    margin-top: 20px;
+	margin-top: 20px;
 }
 
-.group-info-height {
-    font-weight: 700;
-    
-   
+.group-info{
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
 }
 
-.group-info-weight{
-    font-weight: 700;
-    margin-left: 50px;
+.group-info p {
+	font-weight: 700;
+	font-size: 20px;
 }
 
-/* Stats*/
-
-.container-stats{
-    display: flex;
-    gap: 50px;
-    align-items: center;
+/* Stats */
+.container-stats {
+	display: flex;
+	gap: 50px;
+	align-items: center;
 }
 
-.stats{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    flex: 1;
+.stats {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	flex: 1;
 }
 
-
-.stats-group{
-    display: flex;
-    align-items: center;
-    gap: 20px;
+.stat-group {
+	display: flex;
+	align-items: center;
+	gap: 20px;
 }
 
-.stats-group span{
-    flex: 20%;
-    font-weight: 500;
-    font-size: 1;
+.stat-group span {
+	flex: 20%;
+	font-weight: 500;
+	font-size: 18px;
 }
 
-.progress-bar{
-    width: 100%;
-    height: 30px;
-    background-color: var(--color-primary);
-    border-radius: 10px;
+.progress-bar {
+	width: 100%;
+	height: 30px;
+	background-color: var(--color-primary);
+	border-radius: 10px;
+}
+/* Search Page */
+
+.p-search{
+	margin-bottom: 30px;
+	font-size: 22px;
+}
+
+.p-search span{
+	font-weight: 700;
+}
+
+/* Loader */
+
+.container-loader{
+	display: flex;
+	justify-content: center;
+	margin: 200px 0;
+}
+
+/* Btn Load More */
+
+.container-btn-load-more{
+	display: flex;
+	justify-content: center;
+
+	margin-bottom: 20px;
+	margin-top: 20px;
+}
+
+.btn-load-more{
+	border: none;
+	padding: 15px 40px;
+	font-family: inherit;
+	background-color: var(--color-primary);
+	color: #fff;
+	border-radius: 10px;
+	cursor: pointer;
+}
+
+.btn-load-more:hover{
+	background-color: var(--color-primary-hover);
+	color: #000;
 }
